--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,25 @@
     <artifactId>sqlcmd</artifactId>
     <version>1.0</version>
     <name>SQLcmd</name>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -42,7 +57,7 @@
 
     <build>
 
-        <resources>
+        <!--<resources>
             <resource>
                 <directory>src/main/java</directory>
                 <filtering>true</filtering>
@@ -54,19 +69,31 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
-        </resources>
+        </resources>-->
+
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8080</port>
+                    <path>/sqlcmd</path>
                 </configuration>
             </plugin>
 
             <!--use mvn clean compile assembly:single to pack a project-->
-            <plugin>
+          <!--  <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <finalName>sqlcmd</finalName>
@@ -84,7 +111,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
 
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
