--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,11 +6,19 @@
 
   <display-name>SQLCmd</display-name>
 
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>/WEB-INF/application-context.xml</param-value>
+  </context-param>
+
   <servlet>
     <servlet-name>MainServlet</servlet-name>
     <servlet-class>ua.com.juja.sqlcmd.controller.web.MainServlet</servlet-class>
   </servlet>
-
 
   <servlet-mapping>
     <servlet-name>MainServlet</servlet-name>
