--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>${org.springframework.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>jstl</groupId>
