use Spring Data JPA for User Logging Actions

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,14 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/main-servlet.xml</param-value>
+        <param-value>/WEB-INF/application-context.xml</param-value>
     </context-param>
+
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.XmlWebApplicationContext</param-value>
+    </context-param>
+
 
     <servlet>
         <servlet-name>main</servlet-name>
